2005-09-03 Aaron Walker <ka0ttic@gentoo.org>

	* lib/*: Break up everything.  All convenience libs are now located in
	herdstat/LIB.  utility stuff in herdstat/util, portage stuff in
	herdstat/portage, etc.
	* herdstat/exceptions.hh: Moved base exceptions here.
	* src/*: update include paths, etc.
	* Makfile.am.common: Added a common Makefile.am which is now include'd
	by all other Makefile.am's.

2005-09-01 Aaron Walker <ka0ttic@gentoo.org>

	* options.cc, options.hh: Clean up a little.

2005-08-31 Aaron Walker <ka0ttic@gentoo.org>

	* src/xmlparser.cc, src/xmlparser.hh: xml::init should only be
	instantiated once, not once per XMLParser_T instantiation, and
	therefore needs to be static.  This change probably fixes some subtle
	bugs.

2005-08-30 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Update version (1.1.1_p6).
	* lib/vars.cc: Add check to subst() member so that variable
	substitution does not occur when encountering stuff like
	"var=...${var}", preventing possible inf loops, bug #104190.
	* lib/file.cc, lib/file.hh: inline is_file() and is_dir().
	* too many files to list: s/util::string/std::string/,
	s/util::path_T/std::string/.

2005-08-29 Aaron Walker <ka0ttic@gentoo.org>

	* src/Makefile.am, tests/src/Makefile.am, lib/Makefile.am: Add
	-Wold-style-cast to AM_CXXFLAGS.

2005-08-10 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Forgot to remove glibmm/libxml++ stuff.  Do 1.1.1_p5.

	* configure.ac: Update version (1.1.1_p4).

2005-08-09 Aaron Walker <ka0ttic@gentoo.org>

	* src/herds_xml_handler.cc: Append to developer name instead of
	overwriting it as the SAX2 implementation does not guarantee that the
	characters callback will be invoked only once.  This fixes the
	long-time herdstat bug that caused developer names with non-ASCII
	characters to be truncated (since the second invocation of the
	callback would overwrite what was stored on the first invocation).

2005-07-19 Aaron Walker <ka0ttic@gentoo.org>
